add header in code html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<header>
+		<div class="container">
+			<h1>
+				<span class="1color">Papier</span> / 
+				<span class="2color">Kamień</span> / 
+				<span class="3color">Nożyce</span>
+				 - what are you choose?
+			</h1>
+	</header>
 	<div class="container">
 		<div id="buttons">
 			<button id="button-rock">Kamień</button>
