modifed file script.js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<header>
 		<div class="container">
 			<h1>
-				<span class="1color">Papier</span> / 
-				<span class="2color">Kamień</span> / 
-				<span class="3color">Nożyce</span>
+				<span class="color1">Kamień</span> / 
+				<span class="color2">Papier</span> / 
+				<span class="color3">Nożyce</span>
 				 - what are you choose?
 			</h1>
 	</header>
